# lasercube

./: Cargo.toml  LICENSE-MIT  README.md  SPECIFICATION.md
.github/workflows/: ci.yml
crates/lasercube/: Cargo.toml
crates/lasercube-core/: Cargo.toml  README.md
crates/lasercube-core/src/: buffer.rs  cmds.rs  lib.rs  point.rs  status.rs
crates/lasercube/examples/: circle.rs  discover.rs
crates/lasercube/src/: client.rs  discover.rs  lib.rs
