[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
futures = "0.3"
lasercube-core = { version = "0.1.0", path = "crates/lasercube-core" }
thiserror = "1"
tokio = { version = "1.43", features = ["net", "rt"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
